fix: align close button with icon
fix: change launcher box shadow

--- a/src/components/Widget/components/Launcher/style.scss
+++ b/src/components/Widget/components/Launcher/style.scss
@@ -41,7 +41,7 @@
   background-color: $tertiary;
   border: 0;
   border-radius: 50%;
-  box-shadow: 0px 2px 10px 1px $grey-3;
+  box-shadow: 0px 0.5px 4px rgba(0, 0, 0, 0.1), 0px 8px 16px rgba(0, 0, 0, 0.1);
   height: 44px;
   margin: 0;
   width: 44px;
